--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: Arial, sans-serif;
 }
 
 main {
@@ -31,7 +31,7 @@ main {
   background-color: whitesmoke;
   width: 560px;
   min-height: 460px;
-  border: 2px solid #3b82f6;
+  border: 3px solid #3b82f6;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -78,7 +78,7 @@ main {
 
 .chatbot-conversation {
   height: 400px;
-  overflow-y: scroll;
+  overflow-y: auto; /* Change 'scroll' to 'auto' */
   margin: 0em 0;
 }
 
@@ -146,9 +146,20 @@ input[type="text"] {
   border-bottom-left-radius: 0;
 }
 
-.send-btn-icon {
+.send-btn-icon,
+.microphone-icon {
   width: 25px;
   display: block;
+  cursor: pointer;
+}
+
+.microphone-btn {
+  border-top: 1px solid #3b82f6; /* Add top border */
+  border-bottom: 1px solid #3b82f6; /* Add bottom border */
+  border-left: none; /* Remove left border */
+  border-right: none; /* Remove right border */
+  border-radius: 0%;
+  background-color: transparent; /* Remove background color */
   cursor: pointer;
 }
 
@@ -170,6 +181,10 @@ h2 {
   font-weight: 700;
   grid-area: subtitle;
   text-transform: uppercase;
+}
+
+.microphone-btn.hover-active {
+  background-color: lightskyblue; /* Example background color */
 }
 
 /* The cursor */
