--- a/index.css
+++ b/index.css
@@ -207,6 +207,11 @@ h2 {
 
 /* Extra small screens (portrait phones) */
 @media only screen and (max-width: 479px) {
+  main {
+    position: sticky;
+    top: 0;
+    z-index: 1; /* Ensure it appears above other content */
+  }
   .chatbot-container {
     height: 85%;
     width: 85%;
