--- a/index.css
+++ b/index.css
@@ -212,12 +212,21 @@ h2 {
     top: 0;
     z-index: 1; /* Ensure it appears above other content */
   }
+
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    overflow-x: hidden;
+    overflow-y: hidden;
+  }
+
   .chatbot-container {
-    height: 85%;
-    width: 85%;
+    height: 100%;
+    width: 100%;
   }
   .chatbot-header {
-    height: 28%;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
