--- a/index.css
+++ b/index.css
@@ -242,6 +242,7 @@ h2 {
   .chatbot-input-container {
     height: 12%;
     width: 100%;
+    padding: 2%;
     display: flex;
     justify-content: space-around;
     align-items: center;
