--- a/index.css
+++ b/index.css
@@ -117,20 +117,33 @@ main {
 }
 
 .suggestive-prompt-button {
-  background: #3b82f6;
-  color: white;
+  background: white;
+  color: black;
   padding: 0.5rem;
   margin: 0.5rem;
-  border: none;
-  border-radius: 0.25rem;
+  border-top-left-radius: 0;
   cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease; /* Add transition effect */
+  font-size: 16px;
+  margin: 1.2em 1em 0 0;
 }
 
-.chatbot-input-container {
-  display: flex;
+.suggestive-prompt-button:hover {
+  background-image: linear-gradient(
+    to right,
+    #3b82f6,
+    #93c5fd
+  ); /* Gradient background color on hover */
+  font-size: 16px;
 }
 
 .chatbot-prompts-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.chatbot-input-container {
   display: flex;
 }
 
